# telegram_bot_rust_lambda

./: .env.example  Cargo.toml  Makefile  README.md
src/: main.rs
