[package]
name = "new-lambda-project"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
lambda_runtime = "0.13"
reqwest = { version = "0.12", features = [
    "multipart",
    "json",
    "native-tls-vendored",
], default-features = false }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
teloxide = { version = "0.13", features = ["macros"] }

